# Keyboard

./: README.md  keyboard.py
cad/: keyboard.py
firmware/: .clang-format  CMakeLists.txt
firmware/src/: main.c  usb_descriptors.c
